Add entries for some Xbox One gamepads supported by 360Controller

The 360Controller driver exposes Xbox 360-compatible mappings for
Xbox One gamepads. This adds mapping entries for several of the
most common first-party Xbox One gamepads.

BUG=655037
TEST=http://html5gamepad.com/

Review-Url: https://codereview.chromium.org/2456653003
Cr-Commit-Position: refs/heads/master@{#428208}

Former-commit-id: 25521a0137c99d98cf1cd10243070d8c767d6b06